Added exclusions and optimizations to slim down docker image size