@@ -1,4 +1,16 @@
-FROM openjdk:17-jdk-slim AS build
+## This dockerfile uses jlink to build a slimmed down version of the JRE reducing image size considerably
+FROM eclipse-temurin:17 as jre-build
+# Create a custom Java runtime
+RUN $JAVA_HOME/bin/jlink \
+         --add-modules jdk.unsupported,java.base,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /javaruntime
+
+## This image uses maven to build the jar file
+FROM openjdk:17-jdk-slim as mvn-build
 COPY pom.xml mvnw ./
 COPY .mvn .mvn
 RUN chmod +x mvnw
@@ -7,7 +19,12 @@ RUN ./mvnw dependency:resolve
 COPY src src
 RUN ./mvnw package
 
+# Define your base image
+FROM debian:stretch-slim
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH "${JAVA_HOME}/bin:${PATH}"
+COPY --from=jre-build /javaruntime $JAVA_HOME
 
-FROM openjdk:17-jdk-slim
-COPY --from=build target/*.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+RUN mkdir /opt/app
+COPY --from=mvn-build target/*.jar /opt/app/app.jar
+CMD ["java", "-jar", "/opt/app/app.jar"]
